/***********************************************************************\
*                     Changes done to Hexen sources                     *
\***********************************************************************/

-------------------------------- 0.57 -----------------------------------

- Fix compilation for Coldfire CPU.
- Fix compilation for gcc 4.

-------------------------------- 0.56 -----------------------------------

- README: list supported game data files.
- Add -iwad /path/to/gamefile.wad parameter.

-------------------------------- 0.55 -----------------------------------

- Convert audio if 16bits stereo not available.

-------------------------------- 0.54 -----------------------------------

- Added low/high detail message.
- Atari: more rendering optimizations, special 060 routine.
- Fixed weapon drawing in low detail.
- Fixed crash in audio on exit.
- Unrolled 4x rendering loops, a bit faster.
- Rewritten CD music player for SDL.

-------------------------------- 0.52 -----------------------------------

- Disable checksum on networked packets, allow networking with machines with
  different endianness.

-------------------------------- 0.51 -----------------------------------

- Document used environment variables.
- SDL_mixer enable/disable check in configure was wrong.
- Fixed uninitialized bottom array for visplane structure, causing R_MapPlane 
  errors.

-------------------------------- 0.50 -----------------------------------

- Response file readable as '-response <filename>' also with legacy '@filename'
  parameter. '@' character was not usable in standard Atari desktop dialog
  box for command-line.
- Atari: Reserve 256KB instead of 128KB for audio/video buffers as default.

-------------------------------- 0.49 -----------------------------------

- Configuration file and saved games now loaded/saved to $HOME/.hexen directory
  if $HOME is defined.
- Open first available joystick, and print its name. Can also select which